build/log/idf_py_stderr_output_19727
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:469:22: warning: unused variable 'currByte' [-Wunused-variable]
  469 |             uint8_t *currByte = &txBuf[dev->txdByteInd];
      |                      ^~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:504:22: warning: unused variable 'currByte' [-Wunused-variable]
  504 |             uint8_t *currByte = &txBuf[dev->txdByteInd];
      |                      ^~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:554:47: error: implicit declaration of function 'uint8_tCast' [-Wimplicit-function-declaration]
  554 |                     rxBuf[dev->rxdByteInd] |= uint8_tCast(GPIO.in & __mask32(dev->miso));
      |                                               ^~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:622:5: error: implicit declaration of function 'spiSetCLK2Idle'; did you mean 'spiSetCLKState'? [-Wimplicit-function-declaration]
  622 |     spiSetCLK2Idle();
      |     ^~~~~~~~~~~~~~
      |     spiSetCLKState
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:448:13: warning: unused variable 'cpol' [-Wunused-variable]
  448 |     uint8_t cpol = __hasFlagBitSet(dev->conf, SPI_CPOL);
      |             ^~~~
make[2]: *** [esp-idf/spi/CMakeFiles/__idf_spi.dir/build.make:79: esp-idf/spi/CMakeFiles/__idf_spi.dir/spi.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7589: esp-idf/spi/CMakeFiles/__idf_spi.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:3:9: note: '#pragma message: i2c.c is compiling...'
    3 | #pragma message("i2c.c is compiling...")
      |         ^~~~~~~
make: *** [Makefile:136: all] Error 2
